INHEART-309: Fix paths

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,13 +72,13 @@ jobs:
       - name: Setup provisioning profile
         env:
           IOS_KEYS: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-        run: ./.github/secrets/decrypt_secrets.sh
+        run: .github/secrets/decrypt_secrets.sh
       - name: Archiving project
         env:
           PR_NUMBER: $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
-        run: ./.github/scripts/archive_app.sh
+        run: .github/scripts/archive_app.sh
       - name: Exporting .ipa
-        run: ./.github/scripts/export_ipa.sh
+        run: .github/scripts/export_ipa.sh
       - name: Publishing app
         if: success()
         env:
