--- a/apps/mobile/ios/Podfile
+++ b/apps/mobile/ios/Podfile
@@ -40,6 +40,9 @@ target 'inHEARTive' do
       # necessary for Mac Catalyst builds
       :mac_catalyst_enabled => false
     )
+    installer.pods_project.build_configurations.each do |config|
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
+    end
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
     nx_post_install(installer)
   end
