INHEART-421: Fix styled components

--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "@types/react": "18.0.20",
     "@types/react-is": "17.0.3",
     "@types/react-native": "0.70.6",
-    "@types/styled-components": "5.1.26",
+    "@types/styled-components": "5.1.6",
+    "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.1",
