INHEART-338: Add path to inlude variable in tsconfig

--- a/libs/ui/atoms/tsconfig.lib.json
+++ b/libs/ui/atoms/tsconfig.lib.json
@@ -6,5 +6,5 @@
     "jsx": "react-native"
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.spec.tsx", "test-setup.ts"],
-  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]
+  "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "../**/*.ts"]
 }
