INHEART-419: Display app version

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "*",
     "react-hook-form": "*",
     "react-native-date-picker": "*",
-    "date-fns": "*"
+    "date-fns": "*",
+    "react-native-device-info": "*"
   }
 }
