INHEART-387: Add max bid value to env files

--- a/.env.dev
+++ b/.env.dev
@@ -5,6 +5,7 @@ DB_USER=postgres
 DB_PASSWORD=pass123
 DB_NAME=postgres
 
+MAX_BID_VALUE=99999
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
 
