--- a/.env.prod
+++ b/.env.prod
@@ -7,6 +7,7 @@ DB_NAME=#{DB-NAME}#
 
 BACKEND_PORT=8080
 
+MAX_BID_VALUE=99999
 ASSET_MAX_UPLOAD_SIZE=5242880
 ASSET_UPLOAD_PATH=./apps/backend/src/assets
 
