--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,7 +110,7 @@ jobs:
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.4.0
         with:
-          project-path: ios/MyApp.xcodeproj
+          project-path: apps/mobile/ios/inHEARTive.xcodeproj
           #            IOS_P12_BASE64 - key and certificate
           p12-base64: ${{ secrets.IOS_P12_BASE64 }}
           #            IOS_MOBILE_PROVISION_BASE64 : Base64 encoded Provisioning profile file.
@@ -120,8 +120,8 @@ jobs:
           team-id: ${{ secrets.IOS_TEAM_ID }}
           #            IOS_CERTIFICATE_PASSWORD : Password used to generate p2 certificate
           certificate-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          workspace-path: ios/MyApp.xcworkspace
-          scheme: MyApp
+          workspace-path: apps/mobile/ios/inHEARTive.xcworkspace
+          scheme: inHEARTive
 
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
