--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,6 +107,9 @@ jobs:
       - name: Install Pods
         run: cd apps/mobile/ios && pod install --repo-update && cd ..
 
+      - name: Pre-test
+        run: xcodebuild -workspace inHEARTive.xcworkspace -scheme inHEARTive -configuration Release -sdk iphoneos
+
       - name: Build IOS App
         uses: yukiarrr/ios-build-action@v1.4.0
         with:
