--- a/.github/workflows/backend_build_deploy.yml
+++ b/.github/workflows/backend_build_deploy.yml
@@ -6,7 +6,7 @@ name: Build and deploy Node.js app to Azure Web App - inheartive-api
 on:
   push:
     branches:
-      - INHEART-275
+      - master
   workflow_dispatch:
 
 jobs:
