--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,10 @@
 MODE=prod
 
-DB_HOST=#{DB-HOST}#
-DB_USER=#{DB-USER}#
-DB_PASSWORD=#{DB-PASS}#
-DB_NAME=#{DB-NAME}#
+DB_HOST=#{DBHOST}#
+DB_USER=#{DBUSER}#
+DB_PASSWORD=#{DBPASS}#
+DB_NAME=#{DBNAME}#
+DB_CERT=#{DBCERT}#
 
 BACKEND_PORT=8080
 
@@ -20,5 +21,5 @@ OAUTH2_CLIENT_ID=nestjs
 OAUTH2_CLIENT_SECRET=O9Xfb2cpciI1tTgzpHWjWuA7tv3FJkWO
 OAUTH2_SCOPE="profile email"
 
-API_URL_PREFIX_IOS=#{BACKEND-API-URL}#
-API_URL_PREFIX_ANDROID=#{BACKEND-API-URL}#
+API_URL_PREFIX_IOS=#{BACKENDAPIURL}#
+API_URL_PREFIX_ANDROID=#{BACKENDAPIURL}#
