INHEART-372: Change name of pipeline variables (#134)
* INHEART-274: Hot Fix issue - expiration time badge

Delete double 'in' word in AuctionCard in Expiration Time Badge

* INHEART-372: Show .env file during the build

* INHEART-372: Fix Database SSL Auth
- Delete local SSL cert
- Move CERT to Azure Pipeline variables
- Change env.prod file

* INHEART-372: Change build pipeline

- Delete showing env file script from pipeline

* INHEART-372: Fix env variables name

* INHEART-372: Fix database configuration

* INHEART-372: Add changes to build pipeline

* INHEART-372: Add strict names to all entities

* INHEART-372: Change name of pipieline variables

--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
 MODE=prod
 
-DB_HOST=#{DB-HOST}#
-DB_USER=#{DB-USER}#
-DB_PASSWORD=#{DB-PASS}#
-DB_NAME=#{DB-NAME}#
-DB_CERT=#{DB-CERT}#
+DB_HOST=#{DBHOST}#
+DB_USER=#{DBUSER}#
+DB_PASSWORD=#{DBPASS}#
+DB_NAME=#{DBNAME}#
+DB_CERT=#{DBCERT}#
 
 BACKEND_PORT=8080
 
@@ -22,5 +22,5 @@ OAUTH2_CLIENT_ID=nestjs
 OAUTH2_CLIENT_SECRET=O9Xfb2cpciI1tTgzpHWjWuA7tv3FJkWO
 OAUTH2_SCOPE="profile email"
 
-API_URL_PREFIX_IOS=#{BACKEND-API-URL}#
-API_URL_PREFIX_ANDROID=#{BACKEND-API-URL}#
+API_URL_PREFIX_IOS=#{BACKENDAPIURL}#
+API_URL_PREFIX_ANDROID=#{BACKENDAPIURL}#
