INHEART-431: Add ENV vars support
Add ENV variables support in mobile

--- a/libs/data/babel.config.json
+++ b/libs/data/babel.config.json
@@ -8,7 +8,7 @@
       }
     ]
   ],
-  "plugins": [],
+  "plugins": [["module:react-native-dotenv"]],
   "env": {
     "test": {
       "presets": ["module:metro-react-native-babel-preset"]
