--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.4.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.10.0",
