--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,12 @@ apps/mobile-e2e/artifacts
 .env
 /Gemfile.lock
 /apps/mobile/yarn.lock
+
+/apps/mobile/ios/bin/
+/apps/mobile/ios/cache/
+/apps/mobile/ios/extensions/
+/apps/mobile/ios/gems/
+/apps/mobile/ios/specifications/
+/apps/mobile/ios/Gemfile.lock
+
+apps/mobile/ios/inHEARTive.app.dSYM.zip
