--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-is": "18.1.0",
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.6",
-    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-device-info": "^10.4.0",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.10.0",
@@ -53,7 +53,8 @@
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0",
-    "typeorm": "^0.3.10"
+    "typeorm": "^0.3.10",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
