--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,24 +3,25 @@
   "version": "2.0.1",
   "private": true,
   "dependencies": {
+    "@react-native-async-storage/async-storage": "*",
+    "@tanstack/react-query": "*",
     "@testing-library/jest-native": "*",
     "@testing-library/react-native": "*",
+    "date-fns": "*",
+    "jest-each": "*",
+    "native-base": "*",
     "react": "*",
+    "react-hook-form": "*",
     "react-native": "*",
     "react-native-config": "*",
+    "react-native-date-picker": "*",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
+    "react-native-keyboard-aware-scroll-view": "*",
+    "react-native-safe-area-context": "*",
     "react-native-svg": "*",
-    "@react-native-async-storage/async-storage": "*",
+    "react-native-vector-icons": "*",
     "react-router-native": "*",
     "styled-components": "*",
-    "native-base": "*",
-    "react-native-safe-area-context": "*",
-    "jest-each": "*",
-    "react-native-vector-icons": "*",
-    "react-native-keyboard-aware-scroll-view": "*",
-    "@tanstack/react-query": "*",
-    "react-hook-form": "*",
-    "react-native-date-picker": "*",
-    "date-fns": "*",
     "react-native-device-info": "*"
   }
 }
