--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "nx test",
     "prepare": "husky install",
     "graph": "nx graph -dep",
-    "set-version": "concurrently 'cd ./apps/mobile && set-version $VERSION' 'set-version $VERSION'"
+    "set-version": "concurrently 'cd ./apps/mobile && set-version $VERSION' 'set-version $VERSION'",
+    "fastlane": "cd ./apps/mobile/ios && bundle update && bundle exec fastlane release"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +41,7 @@
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.4.0",
+    "react-native-dotenv": "^3.4.8",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
