--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,6 +1,5 @@
 {
   "name": "inheartive",
-  "version": "2.0.1",
   "private": true,
   "dependencies": {
     "@react-native-async-storage/async-storage": "*",
@@ -23,5 +22,6 @@
     "react-router-native": "*",
     "styled-components": "*",
     "react-native-device-info": "*"
-  }
+  },
+  "version": "2.0.2"
 }
