--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "inheartive",
-  "version": "2.0.1",
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --projects=backend,mobile",
@@ -129,5 +128,6 @@
     "tsc-files": "^1.1.3",
     "typescript": "4.9.4",
     "yarn-deduplicate": "^6.0.0"
-  }
+  },
+  "version": "2.0.2"
 }
