--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "inheartive",
+  "version": "2.0.2",
   "license": "MIT",
   "scripts": {
     "start": "nx run-many --target=serve --projects=backend,mobile",
@@ -128,6 +129,5 @@
     "tsc-files": "^1.1.3",
     "typescript": "4.9.4",
     "yarn-deduplicate": "^6.0.0"
-  },
-  "version": "2.0.2"
+  }
 }
