--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -22,6 +22,7 @@
     "react-native-vector-icons": "*",
     "react-router-native": "*",
     "styled-components": "*",
-    "react-native-device-info": "*"
+    "react-native-device-info": "*",
+    "@jest/globals": "*"
   }
 }
