--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react-is": "18.1.0",
     "react-native": "0.70.6",
     "react-native-date-picker": "^4.2.6",
-    "react-native-device-info": "^10.4.0",
+    "react-native-device-info": "^10.6.0",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "^2.7.0",
@@ -52,6 +52,7 @@
     "react-native-screens": "^3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "react-router-native": "^6.4.2",
+    "react-test-renderer": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
@@ -60,7 +61,9 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@commitlint/cli": "^17.1.2",
+    "@jest/globals": "^29.5.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "^14.8.6",
@@ -78,7 +81,7 @@
     "@react-native-community/cli-platform-android": "9.1.0",
     "@react-native-community/cli-platform-ios": "9.1.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/jest-native": "4.0.12",
+    "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "11.1.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
@@ -124,7 +127,7 @@
     "react-native-storybook-loader": "^2.0.5",
     "react-native-svg": "^12.4.4",
     "react-native-svg-transformer": "1.0.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tsc-files": "^1.1.3",
     "typescript": "4.9.4",
