--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,64 +2,115 @@ name: build-android
 on:
   push:
     branches:
-      - master
+      - CICD_iOS
 jobs:
-  build-android:
-    runs-on: ubuntu-latest
+  build-ios:
+    runs-on: macOS-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      # Setup build
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14'
-      - run: yarn install
-      - run: npm install -g nx
+      uses: actions/checkout@v3
 
-      - name: Choose correct .env file
-        run: |
-          echo "🎉 Building for android"
-          mv .env.android.release .env
+     - name: Get yarn cache directory path
+       id: yarn-cache-dir-path
+       run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Building App
-        id: building_app
-        run: nx build-android mobile
-      - name: Sign App Bundle
-        id: sign_app
-        uses: r0adkll/sign-android-release@v1
-        with:
-          releaseDirectory: apps/mobile/android/app/build/outputs/bundle/release
-          # ANDROID_SIGNING_KEY: The base64 encoded signing key used to sign your app
-          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
-          # ANDROID_ALIAS: The alias of your signing key
-          alias: ${{ secrets.ANDROID_ALIAS }}
-          # ANDROID_KEY_STORE_PASSWORD: The password to your signing Keystore
-          keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
-          # ANDROID_KEY_PASSWORD: The private key password for your signing Keystore
-          keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+     - name: Restore node_modules from cache
+       uses: actions/cache@v2
+       id: yarn-cache
+       with:
+         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+         restore-keys: |
+           ${{ runner.os }}-yarn-
 
-      - name: Upload from public_html via FTP
-        uses: airvzxf/ftp-deployment-action@latest
-        with:
-          server: ${{ secrets.FTP_SERVER }}
-          user: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local_dir: './apps/mobile/android/app/build/outputs/bundle/release'
-          remote_dir: './'
-          delete: 'false'
+     - name: Install dependencies
+       run: yarn install --frozen-lockfile --network-timeout 300000
 
-      ## Distribute  App to google play alpha track
-      - name: Upload App to Google Play
-        uses: r0adkll/upload-google-play@v1.0.19
-        with:
-          # ANDROID_SERVICE_ACCOUNT_JSON_TEXT: Private key for Google Play APi Bitrise Deploy
-          serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}
-          packageName: com.intive.inheartive
-          releaseFiles: apps/mobile/android/app/build/outputs/bundle/release/*.aab
-          track: alpha
-          status: completed
-          inAppUpdatePriority: 2
-      - run: echo "🎉 ${{ job.status }}. 🎉"
+     - name: Setup Ruby (bundle)
+       uses: ruby/setup-ruby@v1
+       with:
+         ruby-version: 2.7.2
+         bundler-cache: true
+
+     - name: Restore Pods cache
+       uses: actions/cache@v2
+       with:
+         path: |
+           ios/Pods
+           ~/Library/Caches/CocoaPods
+           ~/.cocoapods
+         key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+         restore-keys: |
+           ${{ runner.os }}-pods-
+
+     - name: Install Pods
+       run: cd ios && pod install --repo-update && cd ..
+    
+     - name: Build & upload iOS binary
+       run: yarn fastlane:beta
+ 
+     - name: Upload app-store ipa and dsyms to artifacts
+       uses: actions/upload-artifact@v2
+       with:
+         name: app-store ipa & dsyms
+         path: |
+           ${{ github.workspace }}/example-iOS.ipa
+           ${{ github.workspace }}/*.app.dSYM.zip
+  # build-android:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+  #     # Setup build
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '14'
+  #     - run: yarn install
+  #     - run: npm install -g nx
+
+  #     - name: Choose correct .env file
+  #       run: |
+  #         echo "🎉 Building for android"
+  #         mv .env.android.release .env
+
+  #     - name: Building App
+  #       id: building_app
+  #       run: nx build-android mobile
+  #     - name: Sign App Bundle
+  #       id: sign_app
+  #       uses: r0adkll/sign-android-release@v1
+  #       with:
+  #         releaseDirectory: apps/mobile/android/app/build/outputs/bundle/release
+  #         # ANDROID_SIGNING_KEY: The base64 encoded signing key used to sign your app
+  #         signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+  #         # ANDROID_ALIAS: The alias of your signing key
+  #         alias: ${{ secrets.ANDROID_ALIAS }}
+  #         # ANDROID_KEY_STORE_PASSWORD: The password to your signing Keystore
+  #         keyStorePassword: ${{ secrets.ANDROID_KEY_STORE_PASSWORD }}
+  #         # ANDROID_KEY_PASSWORD: The private key password for your signing Keystore
+  #         keyPassword: ${{ secrets.ANDROID_KEY_PASSWORD }}
+
+  #     - name: Upload from public_html via FTP
+  #       uses: airvzxf/ftp-deployment-action@latest
+  #       with:
+  #         server: ${{ secrets.FTP_SERVER }}
+  #         user: ${{ secrets.FTP_USERNAME }}
+  #         password: ${{ secrets.FTP_PASSWORD }}
+  #         local_dir: './apps/mobile/android/app/build/outputs/bundle/release'
+  #         remote_dir: './'
+  #         delete: 'false'
+
+  #     ## Distribute  App to google play alpha track
+  #     - name: Upload App to Google Play
+  #       uses: r0adkll/upload-google-play@v1.0.19
+  #       with:
+  #         # ANDROID_SERVICE_ACCOUNT_JSON_TEXT: Private key for Google Play APi Bitrise Deploy
+  #         serviceAccountJsonPlainText: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON_TEXT }}
+  #         packageName: com.intive.inheartive
+  #         releaseFiles: apps/mobile/android/app/build/outputs/bundle/release/*.aab
+  #         track: alpha
+  #         status: completed
+  #         inAppUpdatePriority: 2
+  #     - run: echo "🎉 ${{ job.status }}. 🎉"
 #name: build-ios
 #on:
 #  push:
