--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,60 +1,63 @@
-name: build-android
+name: build-ios
+
 on:
   push:
     branches:
       - CICD_iOS
+
 jobs:
   build-ios:
     runs-on: macOS-latest
     steps:
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-     - name: Get yarn cache directory path
-       id: yarn-cache-dir-path
-       run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-     - name: Restore node_modules from cache
-       uses: actions/cache@v2
-       id: yarn-cache
-       with:
-         path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-         key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-         restore-keys: |
-           ${{ runner.os }}-yarn-
+      - name: Restore node_modules from cache
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
 
-     - name: Install dependencies
-       run: yarn install --frozen-lockfile --network-timeout 300000
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile --network-timeout 300000
 
-     - name: Setup Ruby (bundle)
-       uses: ruby/setup-ruby@v1
-       with:
-         ruby-version: 2.7.2
-         bundler-cache: true
+      - name: Setup Ruby (bundle)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7.2
+          bundler-cache: true
 
-     - name: Restore Pods cache
-       uses: actions/cache@v2
-       with:
-         path: |
-           ios/Pods
-           ~/Library/Caches/CocoaPods
-           ~/.cocoapods
-         key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
-         restore-keys: |
-           ${{ runner.os }}-pods-
+      - name: Restore Pods cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ios/Pods
+            ~/Library/Caches/CocoaPods
+            ~/.cocoapods
+          key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pods-
 
-     - name: Install Pods
-       run: cd ios && pod install --repo-update && cd ..
-    
-     - name: Build & upload iOS binary
-       run: yarn fastlane:beta
- 
-     - name: Upload app-store ipa and dsyms to artifacts
-       uses: actions/upload-artifact@v2
-       with:
-         name: app-store ipa & dsyms
-         path: |
-           ${{ github.workspace }}/example-iOS.ipa
-           ${{ github.workspace }}/*.app.dSYM.zip
+      - name: Install Pods
+        run: cd ios && pod install --repo-update && cd ..
+
+      - name: Build & upload iOS binary
+        run: yarn fastlane:beta
+
+      - name: Upload app-store ipa and dsyms to artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: app-store ipa & dsyms
+          path: |
+            ${{ github.workspace }}/example-iOS.ipa
+            ${{ github.workspace }}/*.app.dSYM.zip
+
   # build-android:
   #   runs-on: ubuntu-latest
   #   steps:
@@ -111,6 +114,7 @@ jobs:
   #         status: completed
   #         inAppUpdatePriority: 2
   #     - run: echo "🎉 ${{ job.status }}. 🎉"
+
 #name: build-ios
 #on:
 #  push:
