--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
         run: yarn fastlane:beta
         env:
           MATCH_GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD_SECRET }}
 
       - name: Upload app-store ipa and dsyms to artifacts
         uses: actions/upload-artifact@v2
