--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Install Pods
         run: cd apps && cd mobile && cd ios && pod install --repo-update && cd ../../../
 
+      - name: Set Xcode version
+        run: sudo xcode-select -s /Applications/Xcode.app
+
       - name: Build & upload iOS binary
         run: yarn fastlane:beta
         env:
