--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: build-ios
 on:
   push:
     branches:
-      - CICD_iOS
+      - CICD_iOS2
 
 jobs:
   build-ios:
@@ -50,6 +50,11 @@ jobs:
           key: ${{ runner.os }}-pods-${{ hashFiles('ios/Podfile.lock') }}
           restore-keys: |
             ${{ runner.os }}-pods-
+
+      - name: Install Xcode 14.0.1
+        uses: actions/setup-xcode@v2
+        with:
+          xcode-version: '14.0.1'
 
       - name: Install Pods
         run: cd apps && cd mobile && cd ios && pod install --repo-update && cd ../../../
