--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pods-
 
-      - name: Install Xcode 14.3
-        uses: actions/setup-xcode@v2
+      - name: Install Xcode latest
+        uses: actions/setup-xcode@v1
         with:
-          xcode-version: '14.3'
+          xcode-version: latest
 
       - name: Install Pods
         run: cd apps && cd mobile && cd ios && pod install --repo-update && cd ../../../
