--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,10 @@ jobs:
   build-ios:
     runs-on: macOS-latest
     steps:
+      - uses: maxim-lobanov/setup-xcode@v1
+        with:
+          xcode-version: '14.0.1'
+
       - uses: actions/checkout@v3
 
       - name: Get yarn cache directory path
@@ -53,9 +57,6 @@ jobs:
 
       - name: Install Pods
         run: cd apps && cd mobile && cd ios && pod install --repo-update && cd ../../../
-
-      - name: Set Xcode version
-        run: sudo xcode-select -s /Applications/Xcode.app
 
       - name: Build & upload iOS binary
         run: yarn fastlane:beta
