--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-ios:
-    runs-on: macOS-latest
+    runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
 
@@ -54,7 +54,7 @@ jobs:
       - name: Install Xcode latest
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest
+          xcode-version: '13.4.0'
 
       - name: Install Pods
         run: cd apps && cd mobile && cd ios && pod install --repo-update && cd ../../../
