--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           xcode-version: '14.0.1'
 
+      - name: Print token
+        run: echo ${{ secrets.TOKEN_GITHUB }}
+
       - uses: actions/checkout@v3
 
       - name: Install xcodes
