--- a/apps/mobile/ios/.xcode.env
+++ b/apps/mobile/ios/.xcode.env
@@ -8,5 +8,5 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
-export NODE_BINARY=$(command -v node)
+export NODE_BINARY="/usr/local/bin/node"
 export ENTRY_FILE="${PROJECT_DIR}/../src/main.tsx"
