--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Show node path
         run: which node
 
+      - name: Install xcodes
+        run: brew install xcodesorg/made/xcodes
+
+      - name: Get list of installed Xcode versions
+        run: xcodes installed
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
