--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
-    "@nrwl/nx-cloud": "^15.0.2",
+    "@nrwl/nx-cloud": "16.0.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@tanstack/react-query": "^4.20.4",
     "class-transformer": "^0.5.1",
@@ -40,7 +40,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "react-is": "18.1.0",
-    "react-native": "0.70.6",
+    "react-native": "0.71.2",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.4.0",
     "react-native-dotenv": "^3.4.8",
@@ -64,41 +64,42 @@
     "@commitlint/cli": "^17.1.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "^14.8.6",
-    "@nrwl/detox": "^14.8.6",
-    "@nrwl/eslint-plugin-nx": "^14.8.6",
-    "@nrwl/jest": "14.8.3",
-    "@nrwl/linter": "^14.8.6",
-    "@nrwl/nest": "^14.8.3",
-    "@nrwl/node": "^14.8.6",
-    "@nrwl/react-native": "^14.8.6",
-    "@nrwl/web": "^14.8.6",
-    "@nrwl/workspace": "^14.8.6",
-    "@react-native-async-storage/async-storage": "1.17.10",
-    "@react-native-community/cli": "9.1.1",
-    "@react-native-community/cli-platform-android": "9.1.0",
-    "@react-native-community/cli-platform-ios": "9.1.0",
+    "@nrwl/cli": "15.8.3",
+    "@nrwl/detox": "15.8.3",
+    "@nrwl/eslint-plugin-nx": "15.8.3",
+    "@nrwl/jest": "15.8.3",
+    "@nrwl/js": "15.8.3",
+    "@nrwl/linter": "15.8.3",
+    "@nrwl/nest": "15.8.3",
+    "@nrwl/node": "15.8.3",
+    "@nrwl/react-native": "15.8.3",
+    "@nrwl/web": "15.8.3",
+    "@nrwl/workspace": "15.8.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/cli": "10.1.3",
+    "@react-native-community/cli-platform-android": "10.1.3",
+    "@react-native-community/cli-platform-ios": "10.1.1",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/jest-native": "4.0.12",
-    "@testing-library/react-native": "11.1.0",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@testing-library/jest-native": "5.4.1",
+    "@testing-library/react-native": "11.5.2",
+    "@types/jest": "29.4.4",
+    "@types/node": "18.11.18",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "18.0.20",
     "@types/react-is": "17.0.3",
-    "@types/react-native": "0.70.6",
+    "@types/react-native": "0.71.2",
     "@types/styled-components": "5.1.6",
     "@types/styled-components-react-native": "^5.2.1",
     "@typescript-eslint/eslint-plugin": "5.48.2",
     "@typescript-eslint/parser": "^5.36.1",
-    "babel-jest": "28.1.1",
+    "babel-jest": "29.4.3",
     "babel-plugin-styled-components": "1.10.7",
     "commitlint-config-jira": "^1.6.4",
     "commitlint-plugin-function-rules": "^1.7.1",
     "commitlint-plugin-jira-rules": "^1.6.4",
     "concurrently": "^7.6.0",
-    "detox": "19.12.1",
+    "detox": "20.1.1",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -107,25 +108,25 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
-    "jest": "28.1.1",
+    "jest": "29.4.3",
     "jest-circus": "28.1.1",
     "jest-each": "^29.2.0",
-    "jest-environment-jsdom": "28.1.1",
+    "jest-environment-jsdom": "29.4.3",
     "jest-react-native": "18.0.0",
     "lint-staged": "^13.0.3",
-    "metro": "0.72.2",
-    "metro-babel-register": "0.72.2",
-    "metro-react-native-babel-preset": "0.72.2",
-    "metro-react-native-babel-transformer": "0.72.2",
-    "metro-resolver": "0.72.2",
-    "nx": "^14.8.6",
+    "metro": "0.72.3",
+    "metro-babel-register": "0.74.1",
+    "metro-react-native-babel-preset": "0.74.1",
+    "metro-react-native-babel-transformer": "0.74.1",
+    "metro-resolver": "0.74.1",
+    "nx": "15.8.3",
     "prettier": "^2.7.1",
-    "react-native-config": "1.4.6",
+    "react-native-config": "1.5.0",
     "react-native-set-version": "^1.1.2",
     "react-native-storybook-loader": "^2.0.5",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.8.0",
     "react-native-svg-transformer": "1.0.0",
-    "ts-jest": "28.0.5",
+    "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "tsc-files": "^1.1.3",
     "typescript": "4.9.4",
