--- a/apps/mobile/project.json
+++ b/apps/mobile/project.json
@@ -5,7 +5,7 @@
   "projectType": "application",
   "targets": {
     "start": {
-      "executor": "@nrwl/react-native:start",
+      "executor": "@nx/react-native:start",
       "options": {
         "port": 8081
       }
@@ -18,11 +18,11 @@
       }
     },
     "run-ios": {
-      "executor": "@nrwl/react-native:run-ios",
+      "executor": "@nx/react-native:run-ios",
       "options": {}
     },
     "bundle-ios": {
-      "executor": "@nrwl/react-native:bundle",
+      "executor": "@nx/react-native:bundle",
       "outputs": ["apps/mobile/build"],
       "options": {
         "entryFile": "src/main.tsx",
@@ -31,16 +31,16 @@
       }
     },
     "run-android": {
-      "executor": "@nrwl/react-native:run-android",
+      "executor": "@nx/react-native:run-android",
       "options": {}
     },
     "build-android": {
-      "executor": "@nrwl/react-native:build-android",
+      "executor": "@nx/react-native:build-android",
       "outputs": ["apps/mobile/android/app/build/outputs/bundle", "apps/mobile/android/app/build/outputs/apk"],
       "options": {}
     },
     "bundle-android": {
-      "executor": "@nrwl/react-native:bundle",
+      "executor": "@nx/react-native:bundle",
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "android",
@@ -48,27 +48,36 @@
       }
     },
     "sync-deps": {
-      "executor": "@nrwl/react-native:sync-deps",
+      "executor": "@nx/react-native:sync-deps",
       "options": {}
     },
     "ensure-symlink": {
-      "executor": "@nrwl/react-native:ensure-symlink",
+      "executor": "@nx/react-native:ensure-symlink",
       "options": {}
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/mobile/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
+      "executor": "@nx/jest:jest",
       "outputs": ["coverage/apps/mobile"],
       "options": {
         "jestConfig": "apps/mobile/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "build-ios": {
+      "executor": "@nx/react-native:build-ios",
+      "outputs": ["{projectRoot}/ios/build/Build"],
+      "options": {}
+    },
+    "pod-install": {
+      "executor": "@nx/react-native:pod-install",
+      "options": {}
     }
   },
   "tags": []
