--- a/libs/ui/organisms/.eslintrc.json
+++ b/libs/ui/organisms/.eslintrc.json
@@ -1,12 +1,12 @@
 {
-  "extends": ["plugin:@nrwl/nx/react", "../../../.eslintrc.json"],
+  "extends": ["plugin:@nx/react", "../../../.eslintrc.json"],
   "ignorePatterns": ["!**/*", "public", ".cache", "node_modules"],
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
         "@typescript-eslint/ban-ts-comment": "off",
-        "@nrwl/nx/enforce-module-boundaries": ["off"]
+        "@nx/enforce-module-boundaries": ["off"]
       }
     },
     {
