--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.41.0",
     "react-is": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-azure-auth": "^1.8.7",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.4.0",
     "react-native-dotenv": "^3.4.8",
