INHEART-000: Add build steps

--- a/.github/workflows/eas.yml
+++ b/.github/workflows/eas.yml
@@ -35,3 +35,12 @@ jobs:
 
       - name: Publish update
         run: cd ./frontend && eas update --auto
+
+      - name: Build Android
+        run: cd ./frontend && eas build --platform android
+
+      - name: Build Web
+        run: cd ./frontend && eas build --platform web
+
+      - name: Build iOS
+        run: cd ./frontend && eas build --platform ios
